Capture plugins at init time